@@ -23,13 +23,14 @@ import haveno.seednode.SeedNodeMain;
 
 /**
  Some non user configurable Haveno seednode, arb node, bob and alice daemon option values.
+ Keep in sync with rootProject.ext JVM args in build.gradle.
  @see <a href="https://github.com/bisq-network/bisq/blob/master/docs/dev-setup.md">dev-setup.md</a>
  */
 public enum HavenoAppConfig {
 
     seednode("haveno-XMR_STAGENET_Seed_2002",
             "haveno-seednode",
-            "-XX:MaxRAM=2g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnHeadlessOpts("2g", "256m", "2g"),
             SeedNodeMain.class.getName(),
             2002,
             5120,
@@ -37,7 +38,7 @@ public enum HavenoAppConfig {
             49996),
     arbdaemon("haveno-XMR_STAGENET_Arb",
             "haveno-daemon",
-            "-XX:MaxRAM=2g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnHeadlessOpts("2g", "256m", "2g"),
             HavenoDaemonMain.class.getName(),
             4444,
             5121,
@@ -45,7 +46,7 @@ public enum HavenoAppConfig {
             49997),
     arbdesktop("haveno-XMR_STAGENET_Arb",
             "haveno-desktop",
-            "-XX:MaxRAM=3g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnDesktopOpts("3g", "384m", "3g"),
             HavenoAppMain.class.getName(),
             4444,
             5121,
@@ -53,7 +54,7 @@ public enum HavenoAppConfig {
             49997),
     alicedaemon("haveno-XMR_STAGENET_Alice",
             "haveno-daemon",
-            "-XX:MaxRAM=2g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnHeadlessOpts("2g", "256m", "2g"),
             HavenoDaemonMain.class.getName(),
             7777,
             5122,
@@ -61,7 +62,7 @@ public enum HavenoAppConfig {
             49998),
     alicedesktop("haveno-XMR_STAGENET_Alice",
             "haveno-desktop",
-            "-XX:MaxRAM=4g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnDesktopOpts("4g", "512m", "4g"),
             HavenoAppMain.class.getName(),
             7777,
             5122,
@@ -69,7 +70,7 @@ public enum HavenoAppConfig {
             49998),
     bobdaemon("haveno-XMR_STAGENET_Bob",
             "haveno-daemon",
-            "-XX:MaxRAM=2g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnHeadlessOpts("2g", "256m", "2g"),
             HavenoDaemonMain.class.getName(),
             8888,
             5123,
@@ -77,12 +78,85 @@ public enum HavenoAppConfig {
             49999),
     bobdesktop("haveno-XMR_STAGENET_Bob",
             "haveno-desktop",
-            "-XX:MaxRAM=4g -Dlogback.configurationFile=apitest/build/resources/main/logback.xml",
+            spawnDesktopOpts("4g", "512m", "4g"),
             HavenoAppMain.class.getName(),
             8888,
             5123,
             -1,
             49999);
+
+    private static final String LOGBACK_OPT =
+            "-Dlogback.configurationFile=apitest/build/resources/main/logback.xml";
+
+    private static final String[] COMMON_JVM_OPTS = {
+            "-XX:+ExitOnOutOfMemoryError",
+            "-XX:+HeapDumpOnOutOfMemoryError",
+            "-XX:HeapDumpPath=haveno-%p.hprof",
+            "-XX:+EnableDynamicAgentLoading",
+            "-Djava.net.preferIPv4Stack=true",
+            "-Dfile.encoding=UTF-8",
+            "-Dstdout.encoding=UTF-8",
+            "-Dstderr.encoding=UTF-8",
+    };
+
+    private static final String[] GC_JVM_OPTS = {
+            "-XX:+UseZGC",
+            "-XX:+ZGenerational",
+            "-XX:ZUncommitDelay=300",
+            "-XX:+SegmentedCodeCache",
+            "-XX:MaxMetaspaceSize=512m",
+            "-XX:ReservedCodeCacheSize=256m",
+    };
+
+    private static final String[] DESKTOP_MODULE_OPENS = {
+            "--add-modules=javafx.controls,javafx.fxml,javafx.swing",
+            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+            "--add-opens=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED",
+            "--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    };
+
+    private static String spawnHeadlessOpts(String maxRam, String xms, String xmx) {
+        return String.join(" ",
+                "-XX:MaxRAM=" + maxRam,
+                "-Xms" + xms,
+                "-Xmx" + xmx,
+                softMaxHeapSize(maxRam),
+                String.join(" ", GC_JVM_OPTS),
+                String.join(" ", COMMON_JVM_OPTS),
+                "-Djava.awt.headless=true",
+                "-Xss1m",
+                LOGBACK_OPT);
+    }
+
+    private static String spawnDesktopOpts(String maxRam, String xms, String xmx) {
+        return String.join(" ",
+                "-XX:MaxRAM=" + maxRam,
+                "-Xms" + xms,
+                "-Xmx" + xmx,
+                softMaxHeapSize(maxRam),
+                String.join(" ", GC_JVM_OPTS),
+                String.join(" ", COMMON_JVM_OPTS),
+                "-Xss1280k",
+                String.join(" ", DESKTOP_MODULE_OPENS),
+                LOGBACK_OPT);
+    }
+
+    private static String softMaxHeapSize(String maxRam) {
+        return switch (maxRam) {
+            case "4g" -> "-XX:SoftMaxHeapSize=3584m";
+            case "3g" -> "-XX:SoftMaxHeapSize=2688m";
+            default -> "-XX:SoftMaxHeapSize=1792m";
+        };
+    }
 
     public final String appName;
     public final String startupScript;
